[package]
name = "trillium-error"
version = "0.1.0"
edition = "2021"
authors = ["Prabir Shrestha <mail@prabir.me>"]
description = "Error handling support for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/prabirshrestha/trillium-error"
readme = "README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = { version = "1.0.109", features = ["full", "parsing"] }
